Fix alignment on toolbar

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -102,5 +102,5 @@ body {
 
 .toolbar.pull-right {
     display: inline-block;
-    margin-top: -35px;
+    margin-top: -44px;
 }
